--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
-# Logs
+.DS_Store
+node_modules
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
 logs
 *.log
 npm-debug.log*
@@ -59,3 +67,12 @@ typings/
 
 # next.js build output
 .next
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
